--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Daily Life Ultra IA</title>
-
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui;}
 body{
@@ -15,7 +14,6 @@ body{
   flex-direction:column;
   transition:background .4s;
 }
-
 /* HEADER */
 header{
   display:flex;
@@ -32,7 +30,6 @@ header h3{font-size:18px;}
   border-radius:14px;
   font-size:13px;
 }
-
 /* NAV */
 #topNav{
   display:flex;
@@ -51,7 +48,6 @@ header h3{font-size:18px;}
 }
 .navBox.active,
 .navBox:hover{background:rgba(255,255,255,.45);}
-
 /* PAGES */
 .page{
   display:none;
@@ -59,7 +55,6 @@ header h3{font-size:18px;}
   padding:14px;
 }
 .page.active{display:flex;}
-
 /* CARD */
 .card{
   background:rgba(255,255,255,.2);
@@ -68,7 +63,6 @@ header h3{font-size:18px;}
   margin-bottom:16px;
 }
 .card h3{margin-bottom:12px;}
-
 /* INPUT */
 input,select,button{
   width:100%;
@@ -84,7 +78,6 @@ button{
   cursor:pointer;
 }
 button:hover{background:#0ea5e9}
-
 /* TASKS */
 .task{
   display:flex;
@@ -96,7 +89,6 @@ button:hover{background:#0ea5e9}
   margin-top:8px;
 }
 .trash{cursor:pointer;font-size:18px;}
-
 /* IA CHAT */
 #chatContainer{
   height:55vh;
@@ -111,6 +103,11 @@ button:hover{background:#0ea5e9}
   border-radius:18px;
   margin:6px 0;
   white-space:pre-line;
+  animation:pop 0.3s ease-out;
+}
+@keyframes pop {
+  0%{transform:scale(0.5);opacity:0;}
+  100%{transform:scale(1);opacity:1;}
 }
 .userMsg{
   background:#38bdf8;
@@ -118,76 +115,68 @@ button:hover{background:#0ea5e9}
   margin-left:auto;
 }
 .iaMsg{
-  background:#22c55e;
   color:black;
+  text-align:center;
+  font-weight:700;
+  border-radius:50%;
+  width:200px;
+  margin:20px auto;
+  padding:30px;
 }
-
+/* PULSATION BUBBLE */
+@keyframes pulse {
+  0%{box-shadow:0 0 0 rgba(255,255,255,0);}
+  50%{box-shadow:0 0 20px rgba(255,255,255,0.3);}
+  100%{box-shadow:0 0 0 rgba(255,255,255,0);}
+}
 /* IA INPUT BAR */
 #iaInputArea{
   display:flex;
-  gap:8px;
-  margin-top:10px;
+  justify-content:center;
   align-items:center;
-  background:rgba(255,255,255,.15);
-  border-radius:30px;
   padding:8px;
+  position:relative;
 }
-
-#iaInput{
-  flex:1;
-  background:transparent;
-  border:none;
-  color:white;
-  font-size:15px;
-  outline:none;
-}
-
 /* ICON BUTTONS */
 .iconBtn{
-  width:46px;
-  height:46px;
+  width:70px;
+  height:70px;
   border-radius:50%;
-  background:#ef4444; /* rouge 100% */
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:18px;
-  cursor:pointer;
-  color:black;
-}
-.iconBtn:hover{background:#dc2626}
-
-#fileInput{display:none}
-
-/* BULLE IA CENTRALE ANIMÉE */
-#iaBubble{
-  position:fixed;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  width:140px;
-  height:140px;
-  border-radius:50%;
-  background:conic-gradient(#38bdf8,#22c55e,#f59e0b,#ef4444,#38bdf8);
+  background:#ff4500;
   display:flex;
   align-items:center;
   justify-content:center;
   font-size:28px;
+  cursor:pointer;
   color:white;
-  text-align:center;
-  animation: pulse 1s infinite alternate, rotate 3s linear infinite;
-  display:none;
-  z-index:1000;
+  transition:0.3s;
 }
-@keyframes pulse{
-  0%{transform:translate(-50%,-50%) scale(1);}
-  100%{transform:translate(-50%,-50%) scale(1.15);}
+.iconBtn:hover{transform:scale(1.1);}
+#voiceSelect{
+  position:absolute;
+  bottom:100px;
+  background:#222;
+  border-radius:14px;
+  padding:10px;
+  display:flex;
+  gap:10px;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity 0.3s;
 }
-@keyframes rotate{
-  0%{background:conic-gradient(#38bdf8,#22c55e,#f59e0b,#ef4444,#38bdf8);}
-  100%{background:conic-gradient(#22c55e,#f59e0b,#ef4444,#38bdf8,#22c55e);}
+#voiceSelect.show{
+  opacity:1;
+  pointer-events:auto;
 }
-
+.voiceOption{
+  padding:6px 12px;
+  background:#38bdf8;
+  border-radius:12px;
+  cursor:pointer;
+  font-size:14px;
+  font-weight:600;
+}
+.voiceOption:hover{background:#0ea5e9;}
 /* FOOTER */
 footer{
   margin-top:auto;
@@ -198,14 +187,11 @@ footer{
 }
 </style>
 </head>
-
 <body>
-
 <header>
   <h3>Daily Life Ultra IA</h3>
   <div id="time"></div>
 </header>
-
 <div id="topNav">
   <div class="navBox active" onclick="showPage('home',this)">Accueil</div>
   <div class="navBox" onclick="showPage('ia',this)">IA</div>
@@ -225,7 +211,6 @@ footer{
       <option value="#ec4899">Rose</option>
     </select>
   </div>
-
   <div class="card">
     <h3>🌍 Langue</h3>
     <select>
@@ -235,7 +220,6 @@ footer{
       <option>Allemand</option>
     </select>
   </div>
-
   <div class="card">
     <h3>✅ Tâches</h3>
     <input id="taskInput" placeholder="Nouvelle tâche">
@@ -247,18 +231,15 @@ footer{
 <!-- IA -->
 <div id="ia" class="page">
   <div id="chatContainer"></div>
-
   <div id="iaInputArea">
-    <div class="iconBtn" onclick="fileInput.click()">+</div>
-    <input id="iaInput" placeholder="Écris un message…">
-    <div class="iconBtn" id="voiceBtn">🎤</div>
-    <div class="iconBtn" onclick="askIA()">⬆</div>
-    <input type="file" id="fileInput" accept="image/*">
+    <div class="iconBtn" id="microBtn">🎤</div>
+    <div id="voiceSelect">
+      <div class="voiceOption" data-voice="homme">Homme</div>
+      <div class="voiceOption" data-voice="femme">Femme</div>
+      <div class="voiceOption" data-voice="chatgpt">ChatGPT</div>
+    </div>
   </div>
 </div>
-
-<!-- BULLE CENTRALE IA -->
-<div id="iaBubble">🎙️</div>
 
 <!-- PROMO -->
 <div id="promo" class="page">
@@ -322,80 +303,75 @@ function delTask(i){
 }
 renderTasks();
 
-// VOIX IA CENTRALE
-const iaBubble=document.getElementById("iaBubble");
-const voiceBtn=document.getElementById("voiceBtn");
-
-voiceBtn.addEventListener("click",()=>{
-  iaBubble.style.display="flex";
-
-  const recognition = new (window.SpeechRecognition||window.webkitSpeechRecognition)();
-  recognition.lang = "fr-FR";
-  recognition.start();
-
-  recognition.onresult = (event)=>{
-    const text = event.results[0][0].transcript;
-    const reply = simulateAIResponse(text);
-    speak(reply);
-  };
-
-  recognition.onerror = ()=>{
-    iaBubble.style.display="none";
-  };
+// IA
+let selectedVoice="chatgpt";
+const microBtn=document.getElementById("microBtn");
+const voiceSelect=document.getElementById("voiceSelect");
+microBtn.addEventListener("click",()=>{
+  voiceSelect.classList.toggle("show");
+});
+document.querySelectorAll(".voiceOption").forEach(v=>{
+  v.addEventListener("click",()=>{
+    selectedVoice=v.dataset.voice;
+    voiceSelect.classList.remove("show");
+    startVoice();
+  });
 });
 
-// IA TEXTE → VOIX
-function askIA(){
-  const text = iaInput.value.trim();
-  if(!text) return;
-  iaInput.value="";
-  iaBubble.style.display="flex";
+function startVoice(){
+  const rec=new (window.SpeechRecognition||window.webkitSpeechRecognition)();
+  rec.lang="fr-FR";
+  rec.start();
 
-  const reply = simulateAIResponse(text);
-  speak(reply);
+  const bubble=document.createElement("div");
+  bubble.className="message iaMsg";
+  bubble.style.background=selectedVoice=="homme"?"#1e90ff":selectedVoice=="femme"?"#ff69b4":"#22c55e";
+  bubble.style.animation="pulse 1s infinite";
+  bubble.textContent="🎤 Parle maintenant…";
+  chatContainer.appendChild(bubble);
+  chatContainer.scrollTop=chatContainer.scrollHeight;
+
+  rec.onresult=e=>{
+    const text=e.results[0][0].transcript;
+    bubble.remove();
+    respond(text);
+  };
 }
 
-// SIMULATION IA
+function respond(text){
+  const reply=simulateAIResponse(text);
+  const bubble=document.createElement("div");
+  bubble.className="message iaMsg";
+  bubble.style.background=selectedVoice=="homme"?"#1e90ff":selectedVoice=="femme"?"#ff69b4":"#22c55e";
+  bubble.style.animation="pulse 1s infinite";
+  bubble.textContent=reply;
+  chatContainer.appendChild(bubble);
+  chatContainer.scrollTop=chatContainer.scrollHeight;
+  speak(reply,()=>bubble.style.animation="none");
+}
+
 function simulateAIResponse(q){
-  q=q.toLowerCase();
-  if(q.includes("h")) return "Salut ! Comment ça va ?";
-  if(q.includes("bonjour")) return "Bonjour ! Je suis là pour t'aider.";
-  if(q.includes("comment")) return "Je vais très bien, merci de demander !";
-  return "Je réfléchis à ta question… et voici ma réponse !";
+  if(q.toLowerCase().includes("h")) return "Salut ! Comment ça va ?";
+  if(q.toLowerCase().includes("bonjour")) return "Bonjour ! Je suis là pour t'aider.";
+  return "Voici ma réponse en vraie voix !";
 }
 
-// VOIX
-function speak(text){
+function speak(text,callback){
   const u=new SpeechSynthesisUtterance(text);
   u.lang='fr-FR';
-  const voices = speechSynthesis.getVoices();
-  const male = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes("male")) || voices[0];
-  if(male) u.voice=male;
-
-  u.onend=()=>{iaBubble.style.display="none";}
+  const voices=speechSynthesis.getVoices();
+  if(selectedVoice=="homme") u.voice=voices.find(v=>v.lang.includes("FR")&&v.name.toLowerCase().includes("male"))||voices[0];
+  else if(selectedVoice=="femme") u.voice=voices.find(v=>v.lang.includes("FR")&&v.name.toLowerCase().includes("female"))||voices[0];
+  else u.voice=voices.find(v=>v.lang.includes("FR"))||voices[0];
+  u.onend=callback;
   speechSynthesis.speak(u);
-}
-
-// IMAGE
-fileInput.onchange=e=>{
-  const file=e.target.files[0];
-  if(!file) return;
-  const reader=new FileReader();
-  reader.onload=ev=>{
-    chatContainer.innerHTML+=`
-      <div class="message userMsg">
-        <img src="${ev.target.result}" style="max-width:100%;border-radius:12px">
-      </div>`;
-  };
-  reader.readAsDataURL(file);
 }
 
 // PROMO
 function validatePromo(){
   promoResult.textContent =
-    promoInput.value==="PROMO2026"?"Code valide":"Code invalide";
+    promoInput.value==="PROMO2026" ? "Code valide" : "Code invalide";
 }
 </script>
-
 </body>
   </html>
